fix for storing range with units into TUA solution, not just range in yards. Plus FindBugs fixes
git-svn-id: http://subversion.assembla.com/svn/Debrief@3274 cb33b658-6c9e-41a7-9690-cba343611204